fix phone container shift

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,10 +28,6 @@ h1 {
     margin-bottom: 0.2em !important;
 }
 
-.custom-title {
-    text-shadow: 2px 2px 4px #B87333;
-}
-
 p {
     margin-bottom: 1.5em;
 }
@@ -119,14 +115,14 @@ mark {
     h1 {
         font-size: 18vw !important;
     }
-    .stMainBlockContainer {
+    /* .stMainBlockContainer {
         padding-left: 0 !important;
         padding-right: 0 !important;
     }
     .stMainBlockContainer > div {
         margin-left: 2rem;
         margin-right: 2rem;
-    }
+    } */
     .stMultiSelect, .stTextInput {
         margin-top: -20px;
     }
